@@ -1,3 +1,7 @@
+1999-02-07  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
+
+	* simtools.h (InFile): Add a warning about error return behavior.
+
 1999-01-20  Marcus G. Daniels  <mgd@chama.santafe.edu>
 
 	* Makefile.am (CURRENT): Bump.
